Use OpenRewrite to update the project to Java 21